css fix, removed vertical scrollbar

--- a/Build-School-Project-No-4/Assets/css/detail_r2.css
+++ b/Build-School-Project-No-4/Assets/css/detail_r2.css
@@ -9,11 +9,6 @@ body {
   margin-bottom: 150px;
 }
 
-/*#playModal button {
-    border: none;
-    border-radius: 17px;
-}*/
-
 #playModal input {
     border: none;
     background-color: rgb(33, 33, 44);
